--- a/assets/style..css
+++ b/assets/style..css
@@ -159,8 +159,8 @@
 
 
  .chart {
-     width: 300px;
-     height: 22px;
+     width: 10%;
+     height: 5%;
      background-color: #ff5b00;
      position: relative;
      left: 343px;
